# libmedia-network-standards

./: .gitignore  .gitmodules  .pre-commit-config.yaml  1722-2016.cpp  1722-2016.h  1722-2016_impl.cpp  1722_1-2013.cpp  1722_1-2021_clean.cpp  1722_1-2021_impl.cpp  1722_1_state_machines.cpp  1722_1_state_machines_refactored.cpp  1722_1_state_machines_refactored.h  AVnu_Milan_1_2-2023_complete.cpp  AVnu_Milan_2_0a-2023.h  CMAKE_UPDATE_SUMMARY.md  CMakeLists.txt  CMakeLists_ieee_1722_1_2013.txt  CMakeLists_minimal.txt  CMakeLists_original.txt  COMPREHENSIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_CROSS_REFERENCES.md  CREATION_ENFORCEMENT_SUMMARY.md  DESCRIPTOR_IMPLEMENTATION_STATUS.md  DEVELOPER_SETUP_GUIDE.md  IEEE_1722_1_2021_GAP_ANALYSIS.md  IEEE_1722_1_2021_LIBRARY_DESIGN_PLAN.md  IEEE_1722_FILE_ORGANIZATION_ANALYSIS.md  IEEE_1722_REORGANIZATION_MAPPING.md  IEEE_1722_REORGANIZATION_PHASE1_COMPLETE.md  IMPLEMENTATION_COMPLETION_REPORT.md  INTEL_AVB_AVDECC_EXTENSION_SUCCESS.md  OBSOLETE_1722_1-2021.cpp  OBSOLETE_1722_1-2021.h  OBSOLETE_1722_1_state_machines.h  README.md  STANDARDS_IMPLEMENTATION_PLAN.md  SUBMODULE_MIGRATION_GUIDE.md  avdecc_packet_analysis.md  compliance-report.json  compliance-report.md  (+48 more)
AVnu/Milan/2.0a-2023/: CMakeLists.txt
Common/: CMakeLists.txt
Common/interfaces/: CMakeLists.txt  CROSS_STANDARD_ABSTRACTION_DESIGN.md  IEEE1588Runtime.hpp  IEEE1588Selector.hpp  IIEEE1588Contract.hpp  VERSION_COMPATIBILITY_MATRIX.md
IEEE/1588/PTP/2019/: CMakeLists.txt  README.md  VERIFICATION_EVIDENCE.md  test_clocks_api.cpp  test_clocks_compile.cpp
IEEE/1588/PTP/2019/cmake/: IEEE1588_2019Config.cmake.in
IEEE/1588/PTP/2019/examples/: CMakeLists.txt  basic_types_example.cpp  realtime_types_example.cpp  simple_clock_test.cpp  test_clock_state_machine.cpp  time_sensitive_types_example.cpp
IEEE/1588/PTP/2019/include/: clocks.hpp
IEEE/1588/PTP/2019/src/: clocks.cpp
IEEE/1588/PTP/2019/tests/: CMakeLists.txt
IEEE/1722.1/2013/: CMakeLists.txt
IEEE/1722.1/2013/core/: ieee_1722_1_2013_legacy.cpp  ieee_1722_1_2013_legacy.h
IEEE/1722.1/2013/tests/: ieee_1722_1_2013_complete_test.cpp  ieee_1722_1_2013_simple_test.cpp  ieee_1722_1_2013_test.cpp
IEEE/1722.1/2021/: CMakeLists.txt  test_acmp_integration.cpp  test_phase2c_aecp_integration.cpp
IEEE/1722.1/2021/core/: ieee_1722_1_2021_base.h  ieee_1722_1_2021_base_backup.h  ieee_1722_1_2021_base_broken.h.bak  ieee_1722_1_2021_base_mismatched.h.bak  ieee_1722_1_2021_base_phase2c.h  ieee_1722_1_2021_clean.cpp  ieee_1722_1_2021_clean.h  ieee_1722_1_2021_core.h  ieee_1722_1_2021_impl.cpp  ieee_1722_1_2021_minimal.cpp  ieee_1722_1_2021_minimal.h  ieee_1722_1_2021_windows.h
IEEE/1722.1/2021/documentation/: IEEE_1722_1_2021_LIBRARY_IMPLEMENTATION_SUMMARY.md  IEEE_1722_1_2021_STATE_MACHINES_IMPLEMENTATION_STATUS.md  IEEE_1722_1_2021_STATE_MACHINE_FINAL_STATUS.md
IEEE/1722.1/2021/examples/: example_avdecc_controller.cpp  ieee_1722_1_2021_controller_example.cpp
IEEE/1722.1/2021/hardware/: ieee_1722_1_2021_intel_hal_bridge.cpp  ieee_1722_1_2021_intel_hal_bridge.h  ieee_1722_1_2021_intel_hal_bridge_new.h
IEEE/1722.1/2021/protocols/acmp/: ieee_1722_1_2021_acmp_implementation.cpp
IEEE/1722.1/2021/protocols/aecp/: ieee_1722_1_2021_aecp_corrected.cpp  (+5 more)
IEEE/1722.1/2021/state_machines/: ieee_1722_1_2021_entity_state_machine.cpp  ieee_1722_1_2021_state_machines_internal.cpp
IEEE/1722.1/2021/testing/: test_adp_integration.cpp
IEEE/1722.1/2021/tests/: ieee_1722_1_2021_test.cpp  test_1722_1_2021.cpp  test_aecp_implementation.cpp  test_core_descriptors_fixed.cpp  test_ieee_1722_1_2021_namespace.cpp
IEEE/1722/2016/: CMakeLists.txt
IEEE/1722/2016/core/: avtpdu.cpp  avtpdu.h  ieee_1722_2016.cpp  ieee_1722_2016.h
IEEE/1722/2016/streaming/: ieee_1722_2016_streaming.cpp
IEEE/1722/2016/tests/: ieee_1722_2016_production_tests.cpp
IEEE/802.1/BA/2016/: CMakeLists.txt  GAP_ANALYSIS.md  IEEE_802_1_BA_21016.cpp  IEEE_802_1_BA_21016.h  README.md
IEEE/802.1/Q/2020/: CMakeLists.txt  IEEE_802_1_Q_2020.cpp  IEEE_802_1_Q_2020.h  README.md  fdb.cpp  fdb.h  filtering.cpp  filtering.h  port_profile.h  qos.cpp  qos.h  scheduler.h  shaper_adapter_windows.h
IEEE/802.1AS/2021/: CMakeLists.txt  README.md
IEEE/802.1AS/2021/cmake/: ieee_802_1as_2021-config.cmake.in
IEEE/802.1AS/2021/core/: CMakeLists_pure.txt  conformity_test_framework.cpp  conformity_test_framework.h  ieee_802_1as_2021.cpp  ieee_802_1as_2021.h  message_validation.cpp  message_validation.h  performance_measurement.cpp  performance_measurement.h  time_sync_engine..bup.cpp  time_sync_engine.cpp  time_sync_engine.cpp.temp  time_sync_engine.h  time_sync_engine_broken.cpp  time_sync_engine_clean.cpp  time_sync_engine_fixed.cpp  time_sync_engine_old.cpp  time_sync_engine_pure.cpp
IEEE/802.1AS/2021/examples/: CMakeLists.txt  CMakeLists_example.txt.backup  ieee_802_1as_2021_integration_example.cpp  ieee_802_1as_2021_integration_example_clean.cpp  ieee_802_1as_2021_master_slave_demo.cpp  intel_hardware_integration_example.cpp  pure_standard_integration_example.cpp
IEEE/802.1AS/2021/state_machines/: CMakeLists.txt  announce_state_machine.h  ieee_802_1as_2021_state_machine_coordinator.h  path_delay_state_machine.h  port_state_machine.cpp  port_state_machine.h  sync_state_machine.h
IEEE/802.1AS/2021/testing/: ieee_802_1as_2021_edge_case_tests.h
IEEE/802.1AS/2021/tests/: CMakeLists.txt  ieee_802_1as_2021_test.cpp  test_ieee_802_1as_2021_real.cpp
Integration/: CMakeLists.txt  avdecc_integration.h  example_integration.cpp  hive_hardware_test.cpp  ieee_provider_implementations.cpp  milan_ieee_bridge_implementation.cpp  milan_ieee_integration_architecture.h  protocol_mapping_utilities.cpp  simple_integration.cpp  test_ieee1588_selector.cpp  test_standards_build.cpp
examples/: CMakeLists.txt  ieee_1722_1_2021_complete_example.cpp
lib/Standards/Common/: CMakeLists.txt
lib/Standards/Common/integration/: standards_coordinator.h
lib/Standards/Common/interfaces/: clock_interface.h  hal_c.h  network_interface.h  timer_interface.h  timing_sync_interface.h  transport_interface.h
(+232 files in other folders)
